--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -111,13 +111,175 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "id": "c5f06c9a",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "from urllib.request import urlopen  # to fetch the pages\n",
+        "from urllib.parse import urljoin\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "b1c8cb76",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rating_map = {\"One\": 1, \"Two\": 2, \"Three\": 3, \"Four\": 4, \"Five\": 5}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f57c3c25",
+      "metadata": {},
+      "source": [
+        "First wanted to do this task on the homepage only. Then realized that there are no UPC, Genre or Description to fetch on the homepage. Going to write the function again\n",
+        "\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "from urllib.request import urlopen\n",
+        "from urllib.parse import urljoin\n",
+        "\n",
+        "rating_map = {\"One\": 1, \"Two\": 2, \"Three\": 3, \"Four\": 4, \"Five\": 5}\n",
+        "\n",
+        "def scrape_books(min_rating=4.0, max_price=20.0):\n",
+        "    homepage_url = \"https://books.toscrape.com/\"\n",
+        "    page = urlopen(homepage_url)\n",
+        "    soup = BeautifulSoup(page, \"html.parser\")\n",
+        "\n",
+        "    books = []\n",
+        "\n",
+        "    for book in soup.select(\"article.product_pod\"):\n",
+        "        title = book.h3.a[\"title\"]\n",
+        "        price_text = book.select_one(\".price_color\").text.strip()\n",
+        "        price = float(price_text.lstrip(\"£\"))\n",
+        "        rating_class = book.select_one(\"p.star-rating\")[\"class\"][1]\n",
+        "        rating = rating_map.get(rating_class, 0)\n",
+        "        availability = book.select_one(\".availability\").text.strip()\n",
+        "        # No UPC, Description, or Genre on homepage\n",
+        "\n",
+        "        if rating < min_rating or price > max_price:\n",
+        "            continue\n",
+        "\n",
+        "        books.append({\n",
+        "            \"Title\": title,\n",
+        "            \"Price (£)\": price,\n",
+        "            \"Rating\": rating,\n",
+        "            \"Availability\": availability\n",
+        "        })\n",
+        "\n",
+        "    return pd.DataFrame(books)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "877f7334",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scrape_books(min_rating=4.0, max_price=20.0):\n",
+        "    base_url = \"https://books.toscrape.com/catalogue/\"\n",
+        "    start_url = \"https://books.toscrape.com/catalogue/page-1.html\"\n",
+        "    books = []\n",
+        "\n",
+        "    while start_url:\n",
+        "        page = urlopen(start_url)\n",
+        "        soup = BeautifulSoup(page, \"html.parser\")\n",
+        "        \n",
+        "        for book in soup.select(\"article.product_pod\"):\n",
+        "            title = book.h3.a[\"title\"]\n",
+        "            rel_url = book.h3.a[\"href\"]\n",
+        "            book_url = urljoin(base_url, rel_url)\n",
+        "            price_text = book.select_one(\".price_color\").text.strip()\n",
+        "            price = float(price_text.lstrip('£'))\n",
+        "            rating_class = book.select_one(\"p.star-rating\")[\"class\"][1]\n",
+        "            rating = rating_map.get(rating_class, 0)\n",
+        "            availability = book.select_one(\".availability\").text.strip()\n",
+        "\n",
+        "            if rating < min_rating or price > max_price:\n",
+        "                continue\n",
+        "\n",
+        "            # Open book detail page\n",
+        "            detail_page = urlopen(book_url)\n",
+        "            detail_soup = BeautifulSoup(detail_page, \"html.parser\")\n",
+        "\n",
+        "            # UPC\n",
+        "            upc = detail_soup.select_one(\"table.table.table-striped tr:nth-child(1) td\").text.strip()\n",
+        "\n",
+        "            # Description\n",
+        "            desc_tag = detail_soup.select_one(\"#product_description\")\n",
+        "            if desc_tag:\n",
+        "                description = desc_tag.find_next_sibling(\"p\").text.strip()\n",
+        "            else:\n",
+        "                description = \"No description\"\n",
+        "\n",
+        "            # Genre\n",
+        "            genre = detail_soup.select(\"ul.breadcrumb li a\")[-1].text.strip()\n",
+        "\n",
+        "            books.append({\n",
+        "                \"UPC\": upc,\n",
+        "                \"Title\": title,\n",
+        "                \"Price (£)\": price,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Availability\": availability,\n",
+        "                \"Description\": description\n",
+        "            })\n",
+        "\n",
+        "            time.sleep(0.1)\n",
+        "\n",
+        "        # Next page\n",
+        "        next_btn = soup.select_one(\"li.next > a\")\n",
+        "        if next_btn:\n",
+        "            next_href = next_btn[\"href\"]\n",
+        "            start_url = urljoin(start_url, next_href)\n",
+        "        else:\n",
+        "            break\n",
+        "\n",
+        "    return pd.DataFrame(books)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "246ff484",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                UPC                                              Title  \\\n",
+            "0  ce6396b0f23f6ecc                                        Set Me Free   \n",
+            "1  6258a1f6a6dcfe50  The Four Agreements: A Practical Guide to Pers...   \n",
+            "2  6be3beb0793a53e7                                     Sophie's World   \n",
+            "3  657fe5ead67a7767            Untitled Collection: Sabbath Poems 2014   \n",
+            "4  51653ef291ab7ddc                                    This One Summer   \n",
+            "\n",
+            "   Price (£)  Rating           Genre Availability  \\\n",
+            "0      17.46       5     Young Adult     In stock   \n",
+            "1      17.66       5    Spirituality     In stock   \n",
+            "2      15.94       5      Philosophy     In stock   \n",
+            "3      14.27       4          Poetry     In stock   \n",
+            "4      19.49       4  Sequential Art     In stock   \n",
+            "\n",
+            "                                         Description  \n",
+            "0  Aaron Ledbetter’s future had been planned out ...  \n",
+            "1  In The Four Agreements, don Miguel Ruiz reveal...  \n",
+            "2  A page-turning novel that is also an explorati...  \n",
+            "3  More than thirty-five years ago, when the weat...  \n",
+            "4  Every summer, Rose goes with her mom and dad t...  \n"
+          ]
+        }
+      ],
+      "source": [
+        "df = scrape_books(min_rating=4.0, max_price=20.0)\n",
+        "print(df.head()) #It took a while to run, so I am printing only the first few rows"
       ]
     }
   ],
@@ -126,7 +288,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -140,7 +302,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
